bootstrap panels added, no links

--- a/Finale/FinaleApp/templates/FinaleApp/home.html
+++ b/Finale/FinaleApp/templates/FinaleApp/home.html
@@ -19,20 +19,24 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+          
+
+          
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
+
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Sign-In
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">User Sign-In</a></li>
+              <li><a class="dropdown-item" href="#">Business Sign-In</a></li>
+            </ul>
+          </li>
+          
         </ul>
       </div>
     </div>
@@ -41,6 +45,37 @@
   <title>My Home Page</title>
 </head>
 <body>
-  <h1>Welcome to my home page!</h1>
+  <h3>Choose an option below <br>and let's get started! </h3>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://banner2.cleanpng.com/20180515/tbq/kisspng-scooter-delivery-online-food-ordering-motorcycle-c-5afab4f52d6386.5215134115263797651859.jpg" 
+    class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Delivery</h5>
+      <p class="card-text">Cozy night in? Having some friends over? Or just plain lazy? Get your food delivered directly to your door.</p>
+      <a href="#" class="btn btn-primary">Delivery</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://www.clipartmax.com/png/middle/184-1846361_fast-food-junk-food-drink-clip-art-food-clipart-black-and-white.png" 
+    class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Order Ahead</h5>
+      <p class="card-text">Living a fast and furious lifestyle? No time for queues? Order your food to be ready when you get there.</p>
+      <a href="#" class="btn btn-primary"> Orders</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="https://png.pngtree.com/png-vector/20200501/ourmid/pngtree-knife-and-fork-illustration-png-image_2197343.jpg" 
+    class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Book a Reservation</h5>
+      <p class="card-text">Looking for something a little more elegant? We also assist you in making reservations.</p>
+      <a href="#" class="btn btn-primary">Bookings</a>
+    </div>
+  </div>
+
 </body>
 </html>
