--- a/Finale/FinaleApp/static/style.css
+++ b/Finale/FinaleApp/static/style.css
@@ -1,4 +1,13 @@
 body {
     background-color: pink;
     text-align: center;
+    margin: auto;
 }
+
+.cards {
+    position: absolute;
+    left: 36%;
+}
+
+
+
