--- a/Finale/FinaleApp/templates/FinaleApp/home.html
+++ b/Finale/FinaleApp/templates/FinaleApp/home.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href=
   "{% static 'style.css' %}">
 
+  
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href=" {% static 'style.css' %} ">
-
-
-  {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
   <nav class="navbar navbar-expand-lg bg-light">
@@ -52,8 +53,10 @@
   <title>My Home Page</title>
 </head>
 <body>
-  <h3>Choose an option below <br>and let's get started! </h3>
+  
 
+<div class="cards">
+  <h3>Choose an option below <br>and let's get started! </h3>
   <div class="card" style="width: 18rem;">
     <img src="https://banner2.cleanpng.com/20180515/tbq/kisspng-scooter-delivery-online-food-ordering-motorcycle-c-5afab4f52d6386.5215134115263797651859.jpg" 
     class="card-img-top" alt="...">
@@ -79,10 +82,12 @@
     class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Book a Reservation</h5>
-      <p class="card-text">Looking for something a little more elegant? We also assist you in making reservations.</p>
+      <p class="card-text">Looking for something a little more elegant? We also handle reservations.</p>
       <a href="#" class="btn btn-primary">Bookings</a>
     </div>
   </div>
+
+</div>
 
 </body>
 </html>
