--- a/Finale/FinaleApp/templates/FinaleApp/home.html
+++ b/Finale/FinaleApp/templates/FinaleApp/home.html
@@ -25,19 +25,21 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Delivery</a>
           </li>
           
-
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+          </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Bookings</a>
           </li>
 
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Sign-In
+              Accounts
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">User Sign-In</a></li>
