new pages made and linked, moving away from those pages is an issue

--- a/Finale/FinaleApp/templates/FinaleApp/bookings.html
+++ b/Finale/FinaleApp/templates/FinaleApp/bookings.html
@@ -25,15 +25,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="delivery.html">Delivery</a>
+            <a class="nav-link active" aria-current="page" href="#">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="orders.html">Orders</a>
+            <a class="nav-link active" aria-current="page" href="#">Orders</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="bookings.html">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="#">Bookings</a>
           </li>
 
 
@@ -52,44 +52,11 @@
     </div>
   </nav>
 
-  <title>Finale - Home</title>
+  <title>Finale - Bookings</title>
 </head>
 <body>
   
-
-<div class="cards">
-  <h3>Choose an option below <br>and let's get started! </h3>
-  <div class="card" style="width: 18rem;">
-    <img src="https://banner2.cleanpng.com/20180515/tbq/kisspng-scooter-delivery-online-food-ordering-motorcycle-c-5afab4f52d6386.5215134115263797651859.jpg" 
-    class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Delivery</h5>
-      <p class="card-text">Cozy night in? Having some friends over? Or just plain lazy? Get your food delivered directly to your door.</p>
-      <a href="#" class="btn btn-primary">Delivery</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="https://www.clipartmax.com/png/middle/184-1846361_fast-food-junk-food-drink-clip-art-food-clipart-black-and-white.png" 
-    class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Order Ahead</h5>
-      <p class="card-text">Living a fast and furious lifestyle? No time for queues? Order your food to be ready when you get there.</p>
-      <a href="#" class="btn btn-primary"> Orders</a>
-    </div>
-  </div>
-
-  <div class="card" style="width: 18rem;">
-    <img src="https://png.pngtree.com/png-vector/20200501/ourmid/pngtree-knife-and-fork-illustration-png-image_2197343.jpg" 
-    class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Book a Reservation</h5>
-      <p class="card-text">Looking for something a little more elegant? We also handle reservations.</p>
-      <a href="#" class="btn btn-primary">Bookings</a>
-    </div>
-  </div>
-
-</div>
+  <h1> Bookings Page </h1>
 
 </body>
 </html>
