Links fixed on homepage, not redirecting from other pages

--- a/Finale/FinaleApp/templates/FinaleApp/home.html
+++ b/Finale/FinaleApp/templates/FinaleApp/home.html
@@ -25,15 +25,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="delivery.html">Delivery</a>
+            <a class="nav-link active" aria-current="page" href="delivery">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="orders.html">Orders</a>
+            <a class="nav-link active" aria-current="page" href="orders">Orders</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="bookings.html">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="bookings">Bookings</a>
           </li>
 
 
