--- a/Finale/FinaleApp/templates/FinaleApp/user.html
+++ b/Finale/FinaleApp/templates/FinaleApp/user.html
@@ -25,15 +25,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Delivery</a>
+            <a class="nav-link active" aria-current="page" href="delivery">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            <a class="nav-link active" aria-current="page" href="orders">Orders</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="bookings">Bookings</a>
           </li>
 
 
@@ -52,12 +52,11 @@
     </div>
   </nav>
 
-  <title> Finale - User </title>
+  <title>Finale - User</title>
 </head>
 <body>
   
-
-<h1> User page. 
+<h1> User </h1>
 
 </body>
 </html>
