--- a/Finale/FinaleApp/templates/FinaleApp/delivery.html
+++ b/Finale/FinaleApp/templates/FinaleApp/delivery.html
@@ -25,15 +25,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Delivery</a>
+            <a class="nav-link active" aria-current="page" href="delivery">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            <a class="nav-link active" aria-current="page" href="orders">Orders</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="bookings">Bookings</a>
           </li>
 
 
@@ -56,7 +56,7 @@
 </head>
 <body>
   
-  <h1> Delivery Page </h1>
+<h1> Delivery </h1>
 
 </body>
 </html>
