--- a/Finale/FinaleApp/templates/FinaleApp/orders.html
+++ b/Finale/FinaleApp/templates/FinaleApp/orders.html
@@ -25,15 +25,15 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Delivery</a>
+            <a class="nav-link active" aria-current="page" href="delivery">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
+            <a class="nav-link active" aria-current="page" href="orders">Orders</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="bookings">Bookings</a>
           </li>
 
 
@@ -52,11 +52,11 @@
     </div>
   </nav>
 
-  <title>Finale - Orders</title>
+  <title>Finale - Orders </title>
 </head>
 <body>
   
-  <h1> Orders Page </h1>
+<h1> Orders </h1>
 
 </body>
 </html>
