--- a/Finale/FinaleApp/templates/FinaleApp/delivery.html
+++ b/Finale/FinaleApp/templates/FinaleApp/delivery.html
@@ -22,18 +22,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url '' %}">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="delivery">Delivery</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="orders">Orders</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'delivery' %}">Delivery</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="bookings">Bookings</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'orders' %}">Orders</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'bookings' %}">Bookings</a>
           </li>
 
 
