updated header of each page instead of 'delivery'

--- a/Finale/FinaleApp/templates/FinaleApp/orders.html
+++ b/Finale/FinaleApp/templates/FinaleApp/orders.html
@@ -52,11 +52,11 @@
     </div>
   </nav>
 
-  <title>Finale - Delivery</title>
+  <title>Finale - Orders</title>
 </head>
 <body>
   
-<h1> Delivery </h1>
+<h1> Orders </h1>
 
 </body>
 </html>
