--- a/Finale/FinaleApp/templates/FinaleApp/business.html
+++ b/Finale/FinaleApp/templates/FinaleApp/business.html
@@ -52,11 +52,11 @@
     </div>
   </nav>
 
-  <title>Finale - Delivery</title>
+  <title>Finale - Business</title>
 </head>
 <body>
   
-<h1> Delivery </h1>
+<h1> Business </h1>
 
 </body>
 </html>
