Forms added to each page + sign-in

--- a/Finale/FinaleApp/templates/FinaleApp/bookings.html
+++ b/Finale/FinaleApp/templates/FinaleApp/bookings.html
@@ -42,8 +42,8 @@
               Accounts
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">User Sign-In</a></li>
-              <li><a class="dropdown-item" href="#">Business Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'user' %}">User Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'business' %}">Business Sign-In</a></li>
             </ul>
           </li>
           
@@ -56,7 +56,40 @@
 </head>
 <body>
   
-<h1> Bookings </h1>
+<h2> Please fill out your details <br> below and place your booking. </h2>
+
+<div class ="bookForm">
+<form>
+  <div class="form-group">
+    <label for="customerName">Name of User for Booking</label>
+    <input type="text" class="form-control" id="customerName" placeholder="Please enter booking name...">
+  </div>
+  <div class="form-group">
+    <label for="time">Time</label>
+    <select class="form-control" id="time">
+      <option>13:00</option>
+      <option>14:00</option>
+      <option>15:00</option>
+      <option>16:00</option>
+      <option>17:00</option>
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="partySize">Party Size</label>
+    <select class="form-control" id="partySize">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6+</option>
+    </select>
+  </div>
+</form>
+
+<button type="button" class="btn btn-light">Place Booking</button>
+
+</div>
 
 </body>
 </html>
