--- a/Finale/FinaleApp/templates/FinaleApp/home.html
+++ b/Finale/FinaleApp/templates/FinaleApp/home.html
@@ -44,8 +44,8 @@
               Accounts
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">User Sign-In</a></li>
-              <li><a class="dropdown-item" href="#">Business Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'user' %}">User Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'business' %}">Business Sign-In</a></li>
             </ul>
           </li>
           
