--- a/Finale/FinaleApp/templates/FinaleApp/user.html
+++ b/Finale/FinaleApp/templates/FinaleApp/user.html
@@ -42,8 +42,8 @@
               Accounts
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">User Sign-In</a></li>
-              <li><a class="dropdown-item" href="#">Business Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'user' %}">User Sign-In</a></li>
+              <li><a class="dropdown-item" href="{% url 'business' %}">Business Sign-In</a></li>
             </ul>
           </li>
           
@@ -56,7 +56,23 @@
 </head>
 <body>
   
-<h1> Users</h1>
+<h1> User Sign-In</h1>
+
+<div class='bookForm'>
+  <form>
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" class="form-control" id="username" placeholder="Please enter username...">
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="text" class="form-control" id="customerName" placeholder="Password...">
+    </div>
+    
+  </form>
+  <button type="button" class="btn btn-light">Login</button>
+  </div>
 
 </body>
 </html>
