HTML structure for home page

--- a/Finale/users/templates/home.html
+++ b/Finale/users/templates/home.html
@@ -1,4 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Finale - Home </title>
+</head>
+<body>
+
 <h1> "The Journey Ahead." </h1>
 
 <a href="{% url 'home' %}"> Home </a>
 <a href="{% url 'login' %}"> Login </a>
+
+</body>
+</html>
