--- a/Finale/users/templates/home.html
+++ b/Finale/users/templates/home.html
@@ -8,7 +8,11 @@
 <h1> "The Journey Ahead." </h1>
 
 <a href="{% url 'home' %}"> Home </a>
-<a href="{% url 'login' %}"> Login </a>
 
+{% if user.is_authenticated %}
+<a href="{% url 'login' %}"> Logout </a>
+{% else %}
+<a href="{% url 'login' %}"> Login </a>
+{% endif %}
 </body>
 </html>
