--- a/Finale/users/templates/authenticate/login.html
+++ b/Finale/users/templates/authenticate/login.html
@@ -14,6 +14,7 @@
 <a href="{% url 'logout' %}"> Logout </a>
 {% else %}
 <a href="{% url 'login' %}"> Login </a>
+<a href="{% url 'create_user' %}"> Sign-Up </a>
 {% endif %}
 
 <form action="" method=POST>
