--- a/Finale/users/templates/authenticate/login.html
+++ b/Finale/users/templates/authenticate/login.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,6 +7,8 @@
 </head>
 
 <body>
+
+{% block content %}
 
 <h1> Login </h1>
 
@@ -30,4 +34,7 @@
   <input type="submit" value="Submit" class="btn btn secondary">
 </form>
 
+{% endblock %} 
+
 </body>
+</html>
