--- a/Finale/users/static/style.css
+++ b/Finale/users/static/style.css
@@ -1,3 +1,21 @@
  body {
- 	background-color: purple; 
+ 	background-color: #5A5A5A; 
+    text-align: center;
  }
+
+.container{
+    margin-top: 2%;
+    background-color: black;
+    color: white;
+    border: 10px double;
+    border-color: #ff6ec7 #00f0ff #00f0ff #ff6ec7;
+    border-radius: 7.5px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="CharField"] textarea {
+  background-color: #474747;
+  color: white;
+}
