--- a/Finale/users/templates/authenticate/create_user.html
+++ b/Finale/users/templates/authenticate/create_user.html
@@ -17,6 +17,8 @@
 
 {% endif %}
 
+<div class="container">
+
 <h1> Sign-Up </h1>
 
 <form action="{% url 'create_user' %}" method=POST>
@@ -26,6 +28,8 @@
 
   <input type="submit" value="Submit" class="btn btn secondary">
 </form>
+
+</div>
 
 {% endblock %}
 
