--- a/Finale/users/templates/authenticate/login.html
+++ b/Finale/users/templates/authenticate/login.html
@@ -10,16 +10,11 @@
 
 {% block content %}
 
+<div class="container">
+
+
 <h1> Login </h1>
 
-<a href="{% url 'home' %}"> Home </a>
-
-{% if user.is_authenticated %}
-<a href="{% url 'logout' %}"> Logout </a>
-{% else %}
-<a href="{% url 'login' %}"> Login </a>
-<a href="{% url 'create_user' %}"> Sign-Up </a>
-{% endif %}
 
 <form action="" method=POST>
 	{% csrf_token %}
@@ -33,7 +28,7 @@
   </div>
   <input type="submit" value="Submit" class="btn btn secondary">
 </form>
-
+</div>
 {% endblock %} 
 
 </body>
