--- a/Finale/users/templates/authenticate/edit_profile.html
+++ b/Finale/users/templates/authenticate/edit_profile.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Finale - Register </title>
+	<title>Finale - Edit Account </title>
 </head>
 <body>
 
@@ -26,7 +26,7 @@
 
 	{{ form.as_p }}
 
-  <input type="submit" value="Submit" class="btn btn secondary">
+  <input type="submit" value="Update Profile" class="btn btn secondary">
 </form>
 
 </div>
