--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -39,6 +39,7 @@
               </a>
               {% if user.is_authenticated %}
               <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'edit_profile' %}">Edit Profile</a></li>
                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
               </ul>
               {% else %}
