added restaurants page

--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -28,9 +28,7 @@
                 Services
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Order</a></li>
-                <li><a class="dropdown-item" href="#">Delivery</a></li>
-                <li><a class="dropdown-item" href="#">Reservations</a></li>
+                <li><a class="dropdown-item" href="{% url 'restaurants' %}">Restaurants</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
