changed restaurant page to 3 services

--- a/Finale/users/templates/OBR/restaurants.html
+++ b/Finale/users/templates/OBR/restaurants.html
@@ -9,45 +9,47 @@
 <body>
 
 {% block content %}
-<br>
-<h1 class="top"> Taste of Dublin </h1>
 <div class="container text-center">
   <div class="row">
     <div class="col">
-      <h1> SOLE - Seafood and Grill</h1>
+      <h1> Lazy night in? Try our food delivery!</h1>
       <br>
-      <img src="https://resizer.otstatic.com/v2/photos/wide-huge/2/26481448.jpg" height = 170px width = 310px alt = "SOLE Interior">
+      <h2> Pizza Max</h1>
       <br>
-      <h3> Details: </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit, sapien in tempor fringilla, dolor quam accumsan lacus, eu fermentum magna velit vel elit. Suspendisse potenti. Proin pellentesque, nisi eget suscipit molestie, quam sapien suscipit enim, quis blandit turpis augue in ex. Maecenas imperdiet dolor ac tortor ullamcorper, et pulvinar ipsum malesuada. </p>
+      <img src="http://pizzamax.ie/wp-content/uploads/2020/12/DELIVERY-DRIVERS-WANTED-2.png" height = 100px width = 230px alt = "pizzaMaxLogo">
       <br>
-      <p> See more information <a href="https://www.sole.ie/">here.</a></p>
       <br>
-      <p> Address: 18 - 19 William St. S, Dublin 2</p>
+      <h4> 'Pizzas, Burgers, Kebabs, Chips, Sides, Desserts & more...' </h4>
+      <br>
+      <p> See more information <a href="https://pizzamax.ie/">here.</a></p>
+      <br>
+      <p> Delivery Area - Dublin City Centre</p>
     </div>
     <div class="col">
-      <h1> FIRE Steakhouse and Bar</h1>
+      <h1> We handle reservations!</h1>
       <br>
-      <img src="https://media-cdn.tripadvisor.com/media/photo-s/1d/ae/68/47/main-dining-room-indoor.jpg" height 150px width = 310px alt ="fireInterior">
+      <h2> FIRE Steakhouse and Bar</h2>
+      <img src="https://www.firesteakhouse.ie/wp-content/themes/fire-v2/images/logo-white.png" height = 130px width = 270px alt ="fireSH">
       <br>
-      <h3> Details: </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit, sapien in tempor fringilla, dolor quam accumsan lacus, eu fermentum magna velit vel elit. Suspendisse potenti. Proin pellentesque, nisi eget suscipit molestie, quam sapien suscipit enim, quis blandit turpis augue in ex. Maecenas imperdiet dolor ac tortor ullamcorper, et pulvinar ipsum malesuada. </p>
+      <h4>'Fire Steakhouse & Bar is among the best restaurants in Dublin city and is consistently voted as one of the top Dublin restaurants.'' </h4>
       <br>
       <p> See more information <a href="https://www.firesteakhouse.ie/">here.</a></p>
       <br>
       <p> Address: Dawson Street The Mansion, Dublin 2</p>
     </div>
     <div class="col">
-      <h1> The Vintage Kitchen Dublin </h1>
+      <h1> Order for quick collection! </h1>
       <br>
-      <img src="https://www.irishtimes.com/resizer/idva3kMvT4Jdiap5BXXBGLGfoyc=/1600x0/filters:format(jpg):quality(70)/cloudfront-eu-central-1.images.arcpublishing.com/irishtimes/UJPQGSOBZBGXWWIFAYZJLUL6TQ.jpg" height 170px width = 310px alt ="vintageInterior">
+      <h2> Burger King</h2>
       <br>
-      <h3> Details: </h3>
-      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit, sapien in tempor fringilla, dolor quam accumsan lacus, eu fermentum magna velit vel elit. Suspendisse potenti. Proin pellentesque, nisi eget suscipit molestie, quam sapien suscipit enim, quis blandit turpis augue in ex. Maecenas imperdiet dolor ac tortor ullamcorper, et pulvinar ipsum malesuada. </p>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Burger_King_1994_logo.png/1024px-Burger_King_1994_logo.png" height = 130px width = 130px alt ="vintageInterior">
+      <br>
+      <br>
+      <h4> 'Have it your way.' </h4>
       <br>
       <p> See more information <a href="https://thevintagekitchen.ie/">here.</a></p>
       <br>
-      <p> 7 Poolbeg Street,Dublin 2</p>
+      <p> Address: Unit 65, Parnell Mall, Ilac Centre, Henry St, Dublin 1, D01 HP73</p>
     </div>
   </div>
 </div>
