replace home page, split services across pages

--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -28,7 +28,9 @@
                 Services
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'restaurants' %}">Restaurants</a></li>
+                <li><a class="dropdown-item" href="{% url 'delivery' %}">Delivery</a></li>
+                <li><a class="dropdown-item" href="{% url 'booking' %}">Bookings</a></li>
+                <li><a class="dropdown-item" href="{% url 'collection' %}">Colection</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
