--- a/Finale/users/templates/BCD/bookingAdd.html
+++ b/Finale/users/templates/BCD/bookingAdd.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     {% block content %}
-    <h1> Make Booking Page</h1>
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+  </form>
     {% endblock %} 
   </body>
 </html>
