--- a/Finale/users/static/style.css
+++ b/Finale/users/static/style.css
@@ -20,3 +20,11 @@ input[type="CharField"] textarea {
 .top {
     color: white;
 }
+
+input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+button {
+  margin-top: 10px;
+}
