--- a/Finale/users/templates/base.html
+++ b/Finale/users/templates/base.html
@@ -8,6 +8,9 @@
 
     {% load static %}
     <link rel="stylesheet" href="{% static '/style.css' %}" type="text/css" >
+    <script src="{% static '/script.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
