--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -10,22 +10,23 @@
     {% block content %}
 
     <div class="row">
-      <div class="col">
-    <input type="checkbox" name="group1" id="g11" value="Option 1" onclick="check(this, 'g12', 'g13');" />Option 1
-    <input type="checkbox" name="group1" id="g12" value="Option 2" onclick="check(this, 'g11', 'g13');" />Option 2
-    <input type="checkbox" name="group1" id="g13" value="Option 3" onclick="check(this, 'g11', 'g12');" />Option 3
-      </div>
-    </div>
+  <div class="col">
+    <input type="checkbox" name="group1" id="g11" value="Coke" onclick="check(this, 'g12', 'g13');" />Coke
+    <input type="checkbox" name="group1" id="g12" value="7Up" onclick="check(this, 'g11', 'g13');" />7Up
+    <input type="checkbox" name="group1" id="g13" value="Water" onclick="check(this, 'g11', 'g12');" />Water
+  </div>
+</div>
 
-    <div class="row">
-      <div class="col">
-    <input type="checkbox" name="group2" id="g21" value="Option 1" onclick="check(this, 'g22', 'g23');" />Option 1
-    <input type="checkbox" name="group2" id="g22" value="Option 2" onclick="check(this, 'g21', 'g23');" />Option 2
-    <input type="checkbox" name="group2" id="g23" value="Option 3" onclick="check(this, 'g21', 'g22');" />Option 3
-      </div>
-    </div>
+<div class="row">
+  <div class="col">
+    <input type="checkbox" name="group2" id="g21" value="330ml" onclick="check(this, 'g22', 'g23');" />330ml
+    <input type="checkbox" name="group2" id="g22" value="500ml" onclick="check(this, 'g21', 'g23');" />500ml
+    <input type="checkbox" name="group2" id="g23" value="1L" onclick="check(this, 'g21', 'g22');" />1L
+  </div>
+</div>
 
-    <button onclick="combineOptions()">Combine Options</button>
+<button onclick="combineDrinkOptions()">Combine Options</button>
+<button onclick="printDrinkOptions()">Print Selected Options</button>
 
     {% endblock %} 
   </body>
