deliveryAdd successfully stores array and userID and can print

--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -28,6 +28,7 @@
 
 <button onclick="combineDrinkOptions()">Combine Options</button>
 <button onclick="printDrinkOptions()">Print Selected Options</button>
+<button onclick="printDetails()">Print Details</button>
 
     {% endblock %} 
   </body>
