--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -26,10 +26,8 @@
   </div>
 </div>
 
-<button onclick="combineDrinkOptions()">Combine Options</button>
-<button onclick="printDrinkOptions()">Print Selected Options</button>
+<button onclick="combineDrinkOptions()">Add to Order</button>
 <button onclick="printDetails()">Print Details</button>
-
     {% endblock %} 
   </body>
 </html>
