--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -29,11 +29,7 @@
 
 
 
-<button onclick="combineDrinkOptions()">Add to Order</button>
-<button onclick="printDetails()">Print Details</button>
-<br>
-<br>
-<div id="combinedOptionsDisplay"></div>
+<button onclick="updateOrderAndPrice()">Add to Cart</button>
 <br>
 <br>
 <form method="post">
@@ -42,26 +38,33 @@
         <label for="id_deliveryID">Delivery ID:</label>
         <input type="number" id="id_deliveryID" name="deliveryID" readonly required>
     </div>
+    <br>
     <div>
     <label for="id_customerID">Customer:</label>
     <input type="text" id="id_customerID" name="customerID" value="{{user.username}}" readonly required>
     </div>
+    <br>
     <div>
-        <label for="id_address">Address:</label>
+        <label for="id_address">Address:*</label>
         <input type="text" id="id_address" name="address" maxlength="255" required>
     </div>
+    <br>
     <div>
-        <label for="id_order">Order:</label>
-        <input type="text" id="id_order" name="order" maxlength="255" readonly required>
-    </div>
+    <label for="id_order">Order:</label>
+    <textarea id="id_order" name="order" rows="7" cols="25" maxlength="255" readonly required></textarea>
+</div>
+
+    <br>
     <div>
-        <label for="id_price">Price:</label>
-        <input type="number" id="id_price" name="price" step="0.01" readonly required>
+    <label for="id_price">Price:</label>
+    <input type="number" id="id_price" name="price" step="0.01" readonly required>
     </div>
+    <br>
     <div>
         <label for="id_notes">Notes:</label>
-        <textarea id="id_notes" name="notes" rows="4" cols="50"></textarea>
+        <textarea id="id_notes" name="notes" rows="7" cols="25"></textarea>
     </div>
+    <br>
     <button type="submit">Submit</button>
 </form>
 </div>
