--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -29,44 +29,15 @@
 
 
 
-<button onclick="updateOrderAndPrice()">Add to Cart</button>
+<button onclick="updateDrinkAndPrice()">Add Drink</button>
+<button onclick="clearCart()">Clear Cart</button>
 <br>
 <br>
 <form method="post">
     {% csrf_token %}
-    <div>
-        <label for="id_deliveryID">Delivery ID:</label>
-        <input type="number" id="id_deliveryID" name="deliveryID" readonly required>
-    </div>
-    <br>
-    <div>
-    <label for="id_customerID">Customer:</label>
-    <input type="text" id="id_customerID" name="customerID" value="{{user.username}}" readonly required>
-    </div>
-    <br>
-    <div>
-        <label for="id_address">Address:*</label>
-        <input type="text" id="id_address" name="address" maxlength="255" required>
-    </div>
-    <br>
-    <div>
-    <label for="id_order">Order:</label>
-    <textarea id="id_order" name="order" rows="7" cols="25" maxlength="255" readonly required></textarea>
-</div>
-
-    <br>
-    <div>
-    <label for="id_price">Price:</label>
-    <input type="number" id="id_price" name="price" step="0.01" readonly required>
-    </div>
-    <br>
-    <div>
-        <label for="id_notes">Notes:</label>
-        <textarea id="id_notes" name="notes" rows="7" cols="25"></textarea>
-    </div>
-    <br>
+    {{ form.as_p }}
     <button type="submit">Submit</button>
-</form>
+  </form>
 </div>
     {% endblock %} 
   </body>
