--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -10,7 +10,7 @@
     {% block content %}
     <div class="container text-center">
     <br> 
-    <p id="userID">{{user.username}}</p>
+    <p id="user">{{user.username}}</p>
     <div class="row">
   <div class="col">
     <input type="checkbox" name="group1" id="g11" value="Coke" onclick="check(this, 'g12', 'g13');" />Coke
