--- a/Finale/users/templates/BCD/collectionAdd.html
+++ b/Finale/users/templates/BCD/collectionAdd.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     {% block content %}
-        <div class="container text-center">
+            {% if user.is_authenticated %}
+              <div class="container text-center">
           <h2>Order for Collection!</h2>
     <br> 
     <p id="user">{{user.username}}</p>
@@ -40,6 +41,12 @@
     <button type="submit">Submit</button>
   </form>
 </div>
+              {% else %}
+              <div class="container text-center">
+                <h2> You are not logged in. Please log in <a href="{% url 'login' %}"> here</a> to use our services</h2>
+              </div>
+              {% endif %}
+        
     {% endblock %} 
   </body>
 </html>
