--- a/Finale/users/templates/BCD/deliveryAdd.html
+++ b/Finale/users/templates/BCD/deliveryAdd.html
@@ -8,7 +8,8 @@
   <body>
 
     {% block content %}
-    <div class="container text-center">
+    {% if user.is_authenticated %}
+             <div class="container text-center">
     <br> 
     <p id="user">{{user.username}}</p>
     <div class="row">
@@ -38,7 +39,13 @@
     {{ form.as_p }}
     <button type="submit">Submit</button>
   </form>
-</div>
+</div> 
+              {% else %}
+                <div class="container text-center">
+                <h2> You are not logged in. Please log in <a href="{% url 'login' %}"> here</a> to use our services</h2>
+              </div>
+              {% endif %}
+    
     {% endblock %} 
   </body>
 </html>
