--- a/Finale/users/templates/BCD/delivery.html
+++ b/Finale/users/templates/BCD/delivery.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Finale - Delivery</title>
+  <title>Finale - Delivery</title>
 </head>
 
 <body>
@@ -12,18 +12,18 @@
 <div class="container text-center">
   <div class="row">
     <div class="col">
-      <h1> Lazy night in? Try our food delivery!</h1>
+      <h1>Lazy night in? Try our food delivery!</h1>
       <br>
-      <h2> Pizza Max</h1>
+      <h2>Pizza Max</h2>
       <br>
-      <img src="http://pizzamax.ie/wp-content/uploads/2020/12/DELIVERY-DRIVERS-WANTED-2.png" height = 100px width = 230px alt = "pizzaMaxLogo">
+      <img src="http://pizzamax.ie/wp-content/uploads/2020/12/DELIVERY-DRIVERS-WANTED-2.png" height="100px" width="230px" alt="pizzaMaxLogo">
       <br>
       <br>
-      <h4> 'Pizzas, Burgers, Kebabs, Chips, Sides, Desserts & more...' </h4>
+      <h4>'Pizzas, Burgers, Kebabs, Chips, Sides, Desserts & more...'</h4>
       <br>
-      <p> See more information <a href="https://pizzamax.ie/">here.</a></p>
+      <p>See more information <a href="https://pizzamax.ie/">here.</a></p>
       <br>
-      <p> Delivery Area - Dublin City Centre</p>
+      <p>Delivery Area - Dublin City Centre</p>
     </div>
   </div>
 </div>
